fixed frame alignment

--- a/view/index.css
+++ b/view/index.css
@@ -312,12 +312,12 @@ body {
 }
 
 .frame.va {
-    height: auto;
+    width: auto;
     flex-direction: column;
 }
 
 .frame.ha {
-    width: auto;
+    height: auto;
     flex-direction: row;
 }
 
@@ -341,6 +341,10 @@ body {
 .button {
     border: 1.5px solid var(--background-secondary);
     position: relative;
+}
+
+.button:not(:last-child) {
+    margin-right: 8px;
 }
 
 .button > button {
